WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222705
[LFC][IFC] LineBox::m_rootInlineBox does not need to be a UniqueRef
https://bugs.webkit.org/show_bug.cgi?id=222705
Summary
[LFC][IFC] LineBox::m_rootInlineBox does not need to be a UniqueRef
alan
Reported
2021-03-03 19:31:56 PST
now that we don't have it in the hashmap
Attachments
Patch
(5.63 KB, patch)
2021-03-03 19:36 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-03-03 19:36:11 PST
Created
attachment 422175
[details]
Patch
Antti Koivisto
Comment 2
2021-03-03 21:24:26 PST
Can the same be done for InlineLevelBoxList? Switch the map to use indexes?
EWS
Comment 3
2021-03-04 08:26:34 PST
Committed
r273889
: <
https://commits.webkit.org/r273889
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422175
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-03-04 08:27:16 PST
<
rdar://problem/75037263
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug