[LFC][IFC] LineBox::m_rootInlineBox does not need to be a UniqueRef https://bugs.webkit.org/show_bug.cgi?id=222705

Reviewed by Antti Koivisto.

* layout/inlineformatting/InlineLineBox.cpp:
(WebCore::Layout::m_rootInlineBox):
(WebCore::Layout::LineBox::logicalRectForTextRun const):
(WebCore::Layout::LineBox::logicalRectForInlineLevelBox const):
* layout/inlineformatting/InlineLineBox.h:
(WebCore::Layout::LineBox::logicalRectForRootInlineBox const):
(WebCore::Layout::LineBox::alignmentBaseline const):
(WebCore::Layout::LineBox::inlineLevelBoxForLayoutBox):


Canonical link: https://commits.webkit.org/234850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273889 268f45cc-cd09-0410-ab3c-d52691b4dbfc